--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -57,7 +57,7 @@ modules. Here are some common use cases for when to use tiles:
 
 - Containing a related group of information or actions.
 - Displaying high level information and metrics on dashboards.
-- Guiding user to take actions or navigate.
+- Guiding users to take actions or navigate.
 - Presenting options for single or multiple selections.
 - Hiding or showing large amounts of content.
 
