--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -31,7 +31,7 @@ including information, getting started, how-to, next steps, and more.
 Carbon ships a basic tile structure that responds to the grid. Based on the
 layout structure, tiles can contain type, images and/or a block of color. As
 tiles have no pre-set styles for the content within them, the tile component
-usage guidance is purposefully high level. It focuses specifically on the tile
+usage guidance is purposefully high-level. It focuses specifically on the tile
 itself, not the structure of the information or interactive elements that the
 tile contains—that type of information will be found in the card pattern.
 
