--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -56,7 +56,7 @@ Tiles are reusable components that provide shortcuts to building cards and other
 modules. Here are some common use cases for when to use tiles:
 
 - Containing a related group of information or actions.
-- Displaying high level information and metrics on dashboards.
+- Displaying high-level information and metrics on dashboards.
 - Guiding users to take actions or navigate.
 - Presenting options for single or multiple selections.
 - Hiding or showing large amounts of content.
