--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -21,6 +21,7 @@ needs.
 <AnchorLink>Contextual tokens</AnchorLink>
 <AnchorLink>Inline theming</AnchorLink>
 <AnchorLink>Light or dark mode</AnchorLink>
+<AnchorLink>Resources</AnchorLink>
 
 </AnchorLinks>
 
@@ -84,8 +85,8 @@ of a different set of layering tokens.
 
 <InlineNotification>
 
-**Migration note:** Previously, in `v10` most color tokens had numeral endings,
-now in `v11` only layering tokens will have this distinction. For more
+**Migration note:** Previously, in v10 most color tokens had numeral endings,
+now in v11 only layering tokens will have this distinction. For more
 information, see the [migration guide](/migrating/guide/design#color-tokens).
 
 </InlineNotification>
@@ -590,7 +591,7 @@ Note that smaller components built with an inverse tokens (like tooltip) should
 remain high contrast when switching modes.
 
 <Row>
-<Column colLg={12}>
+<Column colLg={8}>
 
 ![Example of a color mode control](images/color-light-dark-inline.png)
 
@@ -615,8 +616,8 @@ images for modes is to use transparent backgrounds.
 
 **Additional guidance:** Checkout some helpful PAL guidance around how to
 properly treat illustrations, images, and pictograms in light or dark mode on
-[IBM Cloud PAL](https://pages.github.ibm.com/ibmcloud/pal/dark-mode-guidelines/designers/#illustrations-in-dark-mode)
-_IBMers only_.
+[IBM Cloud PAL](https://pages.github.ibm.com/ibmcloud/pal/dark-mode-guidelines/designers/#illustrations-in-dark-mode),
+_for IBMers only_.
 
 </InlineNotification>
 
@@ -638,7 +639,7 @@ _IBMers only_.
 </DoDontRow>
 
 <DoDontRow>
- <DoDont type="dont" colLg={6} caption="Don’t use images with colored backgrounds when switching between modes because they will appear broken and in high contrast in the opposite mode.">
+ <DoDont type="dont" colLg={6} caption="Don’t use images with colored backgrounds when switching between modes because they will appear broken and in high contrast in the opposite mode">
 
 ![A dark UI featuring a light illustration with a white background](images/light-dark-mode-dont-1.png)
 
