--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -249,7 +249,7 @@ modules. Here are some common use cases for when to use tiles:
 ## Tile variants
 
 Tiles can function or be implemented in four ways—read-only, clickable,
-selectable, or expandable. These variation of tiles are flexible enough to
+selectable, or expandable. These variations of tiles are flexible enough to
 support a variety of different use cases when building more complicating card
 features.
 
