--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -469,7 +469,7 @@ hierarchical importance like navigation or catalog tiles.
 
 #### Layout
 
-There are three basic layouts for tiles: **standard**, **vertical mansory**, and
+There are three basic layouts for tiles: **standard**, **vertical masonry**, and
 **horizontal masonry**. The standard layout will be the most commonly used
 version.
 
