--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -473,7 +473,7 @@ There are three basic layouts for tiles: **standard**, **vertical masonry**, and
 **horizontal masonry**. The standard layout will be the most commonly used
 version.
 
-- Displaying high level information and metrics on dashboards.
+- Displaying high-level information and metrics on dashboards.
 - A vertical masonry grid can vary in height, but is consistent in width.
 - A horizontal masonry grid can vary in width. Rows of tiles may vary in height,
   but the tiles within a row are consistent in height.
