--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -652,7 +652,7 @@ guidance, see Carbon’s [buttons](/components/buttons/usage).
 Link has variants depending on the context. For further guidance, see Carbon’s
 [link](/components/buttons/usage).
 
-## Referneces
+## References
 
 - Hagan Rivers,
   [Interactions design with cards/tiles](https://medium.com/@hagan.rivers/interaction-design-with-cards-tiles-5a6895aa220d/)
